# MODULAR-RAG-SERVER

./: .env.example  .gitignore  00-14天技术学习计划.md  01-Day1-RAG系统心智模型.md  README.md  pyproject.toml
.github/skills/checkpoint/: SKILL.md
.streamlit/: config.toml
AI_答疑/: Day1-Index-time与IngestionPipeline详解.md  Day1-Query-time与查询链路详解.md
config/: settings.yaml  settings_financial.yaml
docs/: local-model-and-observability-setup.md
docs/技术学习课程/: 00-14天技术学习计划.md  02-Day2-数据契约与流水线.md  03-Day3-文档分块与上下文工程.md  04-Day4-Embedding与向量空间.md  05-Day5-BM25与稀疏检索.md  06-Day6-混合检索与多路召回.md  07-Day7-RRF排序融合.md  08-Day8-两阶段排序与Rerank.md  09-Day9-可插拔架构与依赖倒置.md  10-Day10-幂等确定性ID与增量索引.md  11-Day11-故障隔离与优雅降级.md  12-Day12-Trace可观测性与RAG诊断.md  13-Day13-离线评估与质量回归.md  14-Day14-MCP工具化与系统设计.md
src/core/: settings.py  types.py
src/core/query_engine/: __init__.py  dense_retriever.py  fusion.py  hybrid_search.py  query_processor.py  reranker.py  sparse_retriever.py
src/core/response/: multimodal_assembler.py
src/core/trace/: __init__.py  langchain_callback.py  trace_collector.py  trace_context.py
src/ingestion/: pipeline.py
src/ingestion/chunking/: document_chunker.py
src/ingestion/embedding/: batch_processor.py  dense_encoder.py  sparse_encoder.py
src/ingestion/storage/: bm25_indexer.py  vector_upserter.py
src/ingestion/transform/: base_transform.py  chunk_refiner.py  image_captioner.py  metadata_enricher.py  section_table_metadata_transform.py
src/libs/embedding/: __init__.py  embedding_factory.py  langchain_embedding.py  openai_embedding.py
src/libs/lc_llm/: __init__.py  (+6 more)
src/mcp_server/: server.py
tests/: test_skip_load_ingestion.py
tests/e2e/: test_data_ingestion.py
tests/integration/: test_chunk_refiner_llm.py  test_hybrid_search.py  test_ingestion_pipeline.py  test_ingestion_trace.py  test_mcp_server.py  test_reranker_llm.py  test_vision_llm_integration.py
tests/unit/: test_chunk_refiner.py  test_composite_evaluator.py  test_custom_evaluator.py  test_dashboard_config.py  test_embedding_factory.py  test_embedding_providers_smoke.py  test_evaluation_panel.py  test_financial_report_splitter.py  test_image_storage.py  test_lc_llm_factory.py  test_lc_llm_providers.py  test_list_collections.py  test_llm_reranker.py  test_markdown_direct_ingestion.py  test_metadata_enricher_contract.py  test_mimo_provider.py  test_multimodal_assembler.py  test_ollama_embedding.py  test_protocol_handler.py  test_query_processor.py  test_ragas_evaluator.py  test_reranker_factory.py  test_section_table_metadata_transform.py  test_trace_context.py  test_trace_service.py  test_vector_store_contract.py
(+35 files in other folders)
